--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "config": "^3.3.8",
     "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
