--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
